# NUMmodel_norwecom_fabm

./: .gitmodules  README.md
norwecome2e_fabm/: CMakeLists.txt  imr_model_library.F90  imr_norwecom.F90  imr_norwecom_num.fpp  imr_norwecom_num.fpp.old  num_setup.fypp
station_test/: fabm.yaml  gotm.yaml  grid.dat.red
